--- a/DETR-ENACT/tox.ini
+++ b/DETR-ENACT/tox.ini
@@ -1,3 +1,7 @@
+# ------------------------------------------------------------------------
+# Copied from DETR (https://github.com/facebookresearch/detr)
+# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved.
+# ------------------------------------------------------------------------
 [flake8]
 max-line-length = 120
 ignore = F401,E402,F403,W503,W504
