--- a/Conditional-DETR-ENACT/requirements.txt
+++ b/Conditional-DETR-ENACT/requirements.txt
@@ -1,3 +1,9 @@
+# ------------------------------------------------------------------------
+# Copied from Conditional DETR (https://github.com/Atten4Vis/ConditionalDETR)
+# Copyright (c) 2021 Microsoft. All Rights Reserved.
+# Licensed under the Apache License, Version 2.0 [see LICENSE for details]
+# ------------------------------------------------------------------------
+
 cython
 git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI&egg=pycocotools
 torch>=1.7.0
